--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* main styles starts here */
 .main {
   display: flex;
   margin: 16px;
@@ -30,26 +29,6 @@
   margin-bottom: 8px;
 }
 
-/* main styles ends here */
-
-/* Add/Edit form styles starts here */
-.input-container {
-  position: relative;
-  margin: 0px 0px 16px 0px;
-}
-
-#add-form i {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 42px;
-  box-sizing: border-box;
-}
-
 .horizontal-input {
   display: flex;
   position: relative;
@@ -63,203 +42,10 @@
   width: 16px;
 }
 
-.radio-group {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 0 16px 0;
+.submit {
+  min-width: 160px;
 }
 
-#radio-heading {
-  margin: 0px 0px 8px 0px;
-}
-
-.radio-group div {
-  min-width: 120px;
-  display: flex;
-  align-items: center;
-}
-
-label.required::after {
-  content: " *";
-  color: var(--error);
-}
-
-input[type="radio"],
-input[type="checkbox"] {
-  margin: 0px 6px 0px 5px;
-  accent-color: var(--primary);
-}
-
-input[type="text"],
-input[type="email"],
-input[type="date"],
-input[type="password"],
-select {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 42px;
-  padding: 0px 20px 0px 40px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-image: url(/images/chevron-down.svg);
-  background-repeat: no-repeat;
-  background-position: center right 10px;
-  background-size: 10px;
-}
-
-input[type="date"]::-webkit-calendar-picker-indicator {
-  display: none;
-}
-
-input[type="button"],
-button {
-  min-width: 200px;
-  height: 42px;
-  background-color: var(--primary);
-  border-radius: 4px;
-  border: none;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-input[type="text"]::before,
-input[type="email"]::before,
-input[type="date"]::before,
-input[type="password"]::before,
-select::before {
-  outline: 1px solid var(--primary);
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="date"]:focus,
-input[type="password"]:focus,
-select:focus {
-  outline: 1px solid var(--primary);
-}
-
-.error-message {
-  color: var(--error);
-  font-size: 10px;
-  line-height: 1.2;
-  margin-top: 2px;
-}
-
-.alert {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 10px 20px;
-  background-color: rgba(0, 128, 0, 0.9);
-  color: #fff;
-  border-radius: 4px;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-  z-index: 1;
-  display: none;
-}
-
-.show {
-  display: block;
-  opacity: 1;
-}
-
-#update-btn {
-  display: none;
-}
-
-#user-list {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-#user-list td,
-#user-list th {
-  border: 1px solid var(--border);
-  padding: 8px;
-}
-
-#user-list tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-#user-list tr:hover {
-  background-color: #ddd;
-}
-
-#user-list th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: var(--primary);
-  color: var(--text-dark);
-}
-
-/* Add/Edit form styles ends here */
-
-/* Data view styles starts here */
-.user-card {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  padding: 15px;
-  background-color: #f9f9f9;
-}
-
-.user-card:not(:last-child) {
-  margin-bottom: 16px;
-}
-
-.user-details {
-  margin-bottom: 16px;
-}
-
-.user-details p {
-  margin: 5px 0;
-}
-
-.user-details span {
-  margin: 5px 0;
-  font-weight: bold;
-}
-
-.user-buttons {
-  display: flex;
-}
-
-.user-buttons button {
-  min-width: auto;
-  padding: 8px 15px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.user-buttons button.edit {
-  background-color: var(--primary);
-  color: #fff;
-}
-
-.user-buttons button.delete {
-  background-color: var(--error);
-  color: #fff;
-}
-
-
-/* Data view styles ends here */
-
-/* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
   /* main styles starts here */
@@ -281,23 +67,11 @@ select:focus {
     flex-direction: column;
   }
 
-  input[type="button"],
-  button {
+  .submit {
     width: 100%;
   }
 
   /* main styles ends here */
-
-  /* Data view styles starts here */
-  .user-buttons {
-    flex-direction: column;
-  }
-
-  .user-buttons .edit {
-    margin-bottom: 16px;
-  }
-
-  /* Data view styles ends here */
 }
 
 /* Medium devices (landscape tablets, 601px to 768px) */
@@ -321,7 +95,7 @@ select:focus {
   /* main styles ends here */
 }
 
-/* Medium devices ( 768px and up) */
+/* Medium devices (769px and up) */
 @media only screen and (min-width: 769px) and (max-width: 990px) {
 
   /* main styles starts here */
@@ -329,8 +103,7 @@ select:focus {
     flex-direction: column;
   }
 
-  input[type="button"],
-  button {
+  .submit {
     width: 100%;
   }
 
