--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* Main layout styles */
 .main {
   display: flex;
   margin: 16px;
@@ -29,6 +30,7 @@
   margin-bottom: 8px;
 }
 
+/* Form layout styles */
 .horizontal-input {
   display: flex;
   position: relative;
@@ -46,7 +48,7 @@
   min-width: 160px;
 }
 
-/* Data view styles starts here */
+/* User data view styles */
 .user-card {
   display: flex;
   flex-direction: column;
@@ -55,7 +57,6 @@
   padding: 15px;
   background-color: #f9f9f9;
 }
-
 
 #user-list {
   border-collapse: collapse;
@@ -123,13 +124,12 @@
   color: #fff;
 }
 
-
-/* Data view styles ends here */
+/* Media queries for responsive design */
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
-  /* main styles starts here */
+  /* Main layout adjustments */
   .main {
     flex-direction: column;
   }
@@ -152,9 +152,7 @@
     width: 100%;
   }
 
-  /* main styles ends here */
-
-  /* Data view styles starts here */
+  /* User data view adjustments */
   .user-buttons {
     flex-direction: column;
   }
@@ -162,14 +160,12 @@
   .user-buttons .edit {
     margin-bottom: 16px;
   }
-
-  /* Data view styles ends here */
 }
 
 /* Medium devices (landscape tablets, 601px to 768px) */
 @media only screen and (min-width: 601px) and (max-width: 768px) {
 
-  /* main styles starts here */
+  /* Main layout adjustments */
   .main {
     flex-direction: column;
   }
@@ -183,14 +179,12 @@
   .horizontal-input {
     flex-direction: column;
   }
-
-  /* main styles ends here */
 }
 
 /* Medium devices (769px and up) */
 @media only screen and (min-width: 769px) and (max-width: 990px) {
 
-  /* main styles starts here */
+  /* Main layout adjustments */
   .horizontal-input {
     flex-direction: column;
   }
@@ -198,6 +192,4 @@
   .submit {
     width: 100%;
   }
-
-  /* main styles ends here */
 }
