--- a/src/components/NavBar/Style.css
+++ b/src/components/NavBar/Style.css
@@ -45,6 +45,10 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
+    .navbar {
+        position: relative;
+    }
+
     .navbar,
     .navbar div {
         flex-direction: column;
